<resources>
    <string name="device_sn">序列号</string>
    <string name="device_ip">局域网Ip</string>
    <string name="device_port">端口</string>
    <string name="device_user">用户名</string>
    <string name="device_password">密码</string>
    <string name="device_add">添加</string>
    <string name="device">设备</string>
    <string name="video">视频</string>
    <string name="alarm">报警</string>
    <string name="add_by_sn">序列号添加</string>
    <string name="add_by_ip">IP/域名添加</string>
    <string name="select_device">选择设备</string>
    <string name="login_device">登录设备</string>
    <string name="real_play">预览</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="appversion">V1.57</string>
    <string name="app1_name">梯美（管理）</string>
    <string name="hello_world">Hello world!</string>
    <string name="file_name">ElevatorMan</string>
    <string name="user_name">用户名:</string>
    <string name="password">密码:</string>
    <string name="login">登录</string>
    <string name="user_null">用户名不能为空</string>
    <string name="pwd_null">密码不能为空</string>
    <string name="update_location">更新位置</string>
    <string name="call">呼叫</string>
    <string name="info_check">详情查看</string>
    <string name="main_page">电梯易管家</string>
    <string name="project">项目名称</string>
    <string name="address">项目地址</string>
    <string name="distance">项目距离</string>
    <string name="pro_tel">物业电话</string>
    <string name="elevatorInfo">电梯信息</string>
    <string name="accept_alarm">接收</string>
    <string name="cancel_alarm">取消</string>
    <string name="arrive">到达</string>
    <string name="exception">意外情况</string>
    <string name="has_injured">是否有伤员</string>
    <string name="except_choice">意外情况选择</string>
    <string name="except_1">意外情况一</string>
    <string name="except_2">意外情况二</string>
    <string name="except_3">意外情况三</string>
    <string name="has_alarm_msg">有新的报警消息</string>
    <string name="wait_msg">报警任务已经接单，请等待分配结果</string>
    <string name="task_dealing">救援中的报警</string>
    <string name="task_assigning">指派中的报警</string>
    <string name="task_null">未处理的报警</string>
    <string name="rescu_complete">完成救援</string>
    <string name="saved_count">被救人数:</string>
    <string name="injured_count">伤亡人数:</string>
    <string name="other">说明:</string>
    <string name="submit">提交</string>
    <string name="submit_suc">救援结果提交成功</string>
    <string name="first_page">主页</string>
    <string name="current_alarm">当前处理</string>
    <string name="alarm_list">报警列表</string>
    <string name="alarm_history_list">历史列表</string>
    <string name="property_maintenance">维保管理</string>
    <string name="log_out">退出登录</string>
    <string name="alarm_page">项目报警</string>
    <string name="title_alarm_list">应急救援</string>
    <string name="title_rescu_process">确认救援进度</string>
    <string name="title_rescu_complete">救援完成</string>
    <string name="building_chosen">选择楼号</string>
    <string name="elevator_chosen">选择报警电梯</string>
    <string name="easy_alarm">一键报警</string>
    <string name="alarm_complete">救援完成</string>
    <string name="cur_state">当前状态:</string>
    <string name="worker">维修工:</string>
    <string name="telephone">联系方式:</string>
    <string name="company">维保公司</string>
    <string name="alarm_trace">报警状态跟踪</string>
    <string name="new_alarm">新的报警事件</string>
    <string name="alarm_info">有电梯发生事故，点击进入详细信息</string>
    <string name="alarm_assigned">您已被指派</string>
    <string name="assigned_info">您被指派进行电梯救援，点击进入</string>
    <string name="alarm_unassigned">您未被指派</string>
    <string name="unassigned_info">您不需要此次电梯救援</string>
    <string name="injured_positive">有人伤</string>
    <string name="injured_negative">无人伤</string>
    <string name="alarm_remark">输入情况说明</string>
    <string name="project_info">项目:</string>
    <string name="elevator_info">电梯:</string>
    <string name="alarm_submit">报警</string>
    <string name="alarm_cancel">取消</string>
    <string name="accept_suc">接单成功</string>
    <string name="except_submit">已经提交意外情况</string>
    <string name="input_name">输入您的用户名</string>
    <string name="input_pwd">输入您的密码</string>
    <string name="no_alarm">没有处理中的报警事件</string>
    <string name="exit_confirm">确实要退出应用?</string>
    <string name="property_complete">救援已经完成</string>
    <string name="history_null">没有处理过的报警事件</string>
    <string name="alarm_pre_part">您已经被分配至</string>
    <string name="alarm_next_part">参与救援，事不宜迟</string>
    <string name="go_now">立即前往</string>
    <string name="cancel">取消</string>
    <string name="confirm">查看</string>
    <string name="except_confirm">确认</string>
    <string name="except">意外情况，无法到达</string>
    <string name="default_text">——</string>
    <string name="ip_default">ip地址设置为默认地址</string>
    <string name="ip_illegal">ip地址不合法</string>
    <string name="add_null">无法获取地址信息</string>
    <string name="new_msg">新消息</string>
    <string name="title_activity_lift">LiftActivity</string>
    <string name="action_settings">Settings</string>
    <string name="lift_code">电梯编号</string>
    <string name="lift_add">电梯地址</string>
    <string name="last_main">上次维保:</string>
    <string name="main_type">维保类型:</string>
    <string name="main_plan">维保计划:</string>
    <string name="main_worker">维保工人:</string>
    <string name="next_main_date">计划日期:</string>
    <string name="next_main_type">计划类型</string>
    <string name="main_date">维保日期</string>
    <string name="main_complete">维保完成</string>
    <string name="make_plan">制定计划</string>
    <string name="modify_plan">修改计划</string>
    <string name="no_plan">未制定</string>
    <string name="null_plan">无</string>
    <string name="my_lift">维保电梯</string>
    <string name="remind">维保提醒</string>
    <string name="settings">设置</string>
    <string name="switch_on">开启</string>
    <string name="switch_off">关闭</string>
    <string name="semi_month">半月保</string>
    <string name="month">月保</string>
    <string name="season">季度保</string>
    <string name="semi_year">半年保</string>
    <string name="year">年保</string>
    <string name="maintenance">电梯维保</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_title">维修工注册</string>
    <string name="register_user_name">用户名</string>
    <string name="necessary">*</string>
    <string name="register_pwd">密码</string>
    <string name="pwd_confirm">确认密码</string>
    <string name="register_name">姓名</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="city">城市</string>
    <string name="company_name">公司名称</string>
    <string name="card_id">身份证号</string>
    <string name="operation_code">操作证号</string>
    <string name="phone_num">手机号码</string>
    <string name="register_user_null">用户名不能为空</string>
    <string name="register_user_repeat">用户名已经被使用</string>
    <string name="register_pwd_null">密码不能为空</string>
    <string name="register_confirm_pwd_null">确认密码不能为空</string>
    <string name="register_pwd_diff">确认密码和密码不一致</string>
    <string name="register_pwd_short">密码至少为6位</string>
    <string name="register_name_null">姓名不能为空</string>
    <string name="register_age_null">年龄不能为空</string>
    <string name="register_city_null">城市不能为空</string>
    <string name="company_null">公司名称不能为空</string>
    <string name="card_id_null">身份证号不能为空</string>
    <string name="card_id_incorrect">请输入合法的身份证号</string>
    <string name="register_operation_null">操作码不能为空</string>
    <string name="register_phone_null">手机号码不能为空</string>
    <string name="register_phone_incorrect">请输入合法的手机号码</string>
    <string name="register_success">注册成功,请等待管理员审核</string>
    <string name="login_name_exist">用户名已经存在</string>
    <string name="next_step">下一步</string>
    <string name="register_submit">确认</string>
    <string name="title_project_choose">选择项目</string>
    <string name="plan_confirm">已确认</string>
    <string name="plan_reject">已拒绝</string>
    <string name="plan_waiting">待确认</string>
    <string name="main_detail">维保详情</string>
    <string name="query_all">--ALL--</string>
    <string name="query_title">筛选</string>
    <string name="person_center">个人中心</string>
    <string name="basic_info">基本信息</string>
    <string name="forget_password">忘记密码</string>
    <string name="lift_knowledge">电梯百科</string>
    <string name="title_activity_mainpage">MainpageActivity</string>
    <string name="main_page_item_rescue">应急救援</string>
    <string name="main_page_item_maintenance">维保管理</string>
    <string name="main_page_item_help">帮助中心</string>
    <string name="main_page_item_person">个人中心</string>
    <string name="main_page_item_bbs">论坛</string>
    <string name="main_page_item_wiki">电梯百科</string>
    <string name="no_order">暂无订单!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maintenance_manager">MaintenanceManagerActivity</string>
    <string name="title_activity_lift_detail">LiftDetailActivity</string>
    <string name="title_activity_lift_plan">LiftPlanActivity</string>
    <string name="title_activity_lift_complete">LiftCompleteActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_help_center">HelpCenterActivity</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="title_activity_add_sel">AddSelActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_alarm_detail">AlarmDetailActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="main_man_pro">怡墅维保</string>
    <string name="main_man_fix">怡墅维修</string>
    <string name="mine">我的</string>
    <string name="main_tab_page">首页</string>
    <string name="question">常见问题</string>
    <string name="save_num">故障码</string>
    <string name="handle_rule">操作手册</string>
    <string name="safe_rule">安全法规</string>
    <string name="baseInfoaddress">地址</string>
    <string name="tel">电话</string>
    <string name="time">时间</string>
    <string name="brand">品牌</string>
    <string name="add_plan">添加计划</string>
    <string name="modify">修改</string>
    <string name="start_now">现在出发</string>
    <string name="today_giveup">今日无法处理</string>
    <string name="finish">完成</string>
    <string name="look_result">查看维保结果</string>
    <string name="look_eva">查看评价</string>
    <string name="sucess">成功</string>
    <string name="before_service">维保前</string>
    <string name="after_service">维保后</string>
    <string name="order_detail">订单详情</string>
    <string name="order_id">订单编号：</string>
    <string name="app_time">预约时间：</string>
    <string name="order_time">订单时间：</string>
    <string name="breaktype">故障类型：</string>
    <string name="breakdes">故障描述</string>
    <string name="vill_address">别墅地址：</string>
    <string name="eve_brand">电梯品牌：</string>
    <string name="eve_weight">电梯载重量：</string>
    <string name="eve_landing">层站：</string>
    <string name="nexttimedeal">下次上门</string>
    <string name="createpaybill">支付单生成</string>
    <string name="break_ima">故障图片</string>
    <string name="fix_task">维修任务</string>
    <string name="rec_id">记录ID：</string>
    <string name="fix_worker">维修人员：</string>
    <string name="contact_tel">联系电话：</string>
    <string name="fix_time">维修时间：</string>
    <string name="curr_task">当前任务</string>
    <string name="before_start">出发</string>
    <string name="arrived">已到达</string>
    <string name="fix_look_finish">完成维修</string>
    <string name="fix_finish">维修完成</string>
    <string name="fix_result_look">维修结果查看</string>
    <string name="fix_look_eva">维修评价查看</string>
    <string name="paymentsubmit">提交订单</string>
    <string name="count">总计：</string>
    <string name="title_apptime">预约时间</string>
    <string name="company_save">紧急救援</string>
    <string name="rescu_his">救援历史</string>
    <string name="save_detail">救援详情</string>
    <string name="eve_ensure">电梯合格证</string>
    <string name="EMentenance">E维保</string>
</resources>