<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.honyum.elevatorMan.activity.maintenance.MaintenanceActivity">

    <include
        android:id="@+id/title_maintenance"
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/maintenance_lift"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/code_size"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/lift_code"/>

            <TextView
                android:id="@+id/tv_lift_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12345678901234567890"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/code_size"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/lift_add"/>

            <TextView
                android:id="@+id/tv_lift_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="望京SHOH塔2C座"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/code_size"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/main_worker"/>

            <TextView
                android:id="@+id/tv_main_worker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="张三"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/code_size"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/main_date"/>

            <TextView
                android:id="@+id/tv_main_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2015-10-10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/code_size"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/main_type"/>

            <TextView
                android:id="@+id/tv_main_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="半月保"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_main_complete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/selector_plan_edit"
                android:text="@string/main_complete"
                android:textColor="@color/white"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
